Change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ember-sticky-item",
+  "name": "ember-sticky-wicket",
   "version": "0.0.1",
   "description": "The default blueprint for ember-cli addons.",
   "directories": {
